# badminton-baddies

./: .gitignore  GEMINI.md  README.md
backend/: .gitignore  main.py
badminton-analysis/backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
badminton-analysis/backend/models/: schemas.py
badminton-analysis/backend/routers/: analyze.py  detect.py  tus.py  video.py
badminton-analysis/backend/services/: analysis.py  detection.py  pose.py  storage.py  tracking.py
badminton-analysis/backend/src/analyses/: evidence.py  feed.py  progress.py  service.py  shot_analysis.py  store.py
badminton-analysis/backend/src/api/: __init__.py  app.py
badminton-analysis/backend/src/badminton_analysis_api/: __init__.py  coach_feedback.py  main.py  models.py  service.py  store.py
badminton-analysis/backend/src/badminton_analysis_api/analyses/: __init__.py  evidence.py  service.py  store.py
badminton-analysis/backend/src/badminton_analysis_api/api/: app.py
badminton-analysis/backend/src/badminton_analysis_api/coaching/: __init__.py  engine.py
badminton-analysis/backend/src/badminton_analysis_api/schemas/: __init__.py  analysis.py  coaching.py  cv.py  report.py
badminton-analysis/backend/src/coaching/: __init__.py  engine.py
badminton-analysis/backend/src/pipelines/cv/: __init__.py  geometry.py  overlay.py  pipeline.py  shuttle.py
badminton-analysis/backend/src/pipelines/media/: __init__.py  pipeline.py
badminton-analysis/backend/src/schemas/: __init__.py  analysis.py  cv.py  report.py  shared.py
badminton-analysis/backend/tests/: conftest.py  test_analyses_api.py  test_analysis_stats.py  test_cv_geometry.py  test_detect.py  test_feed.py  test_pose_pipeline.py  test_shuttle_tracking.py  test_storage.py  test_tracking.py  test_tus.py  test_upload.py  test_video.py
(+146 files in other folders)
