[project]
name = "badminton-analysis"
version = "0.1.0"
description = "FastAPI backend for badminton video analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "google-genai",
  "lap>=0.5.13",
  "mediapipe>=0.10.21",
  "opencv-python-headless>=4.11.0",
  "pydantic-ai",
  "pydantic>=2.11.0",
  "ultralytics>=8.3.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "ty>=0.0.1a16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/badminton_analysis_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
